syntax = "proto3";

option java_package = "net.alexyu.poc.model.proto";
option java_outer_classname = "MarketDataProto";
option java_multiple_files = true;


message MarketPrice {
    string inst_id = 1;
    int64 timestamp = 2;
    double last_price = 3;
}